labs/ingress-lab-04/manifests/04-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: ingress-lab-04
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 80
      targetPort: http
