labs/ingress-lab-04/manifests/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fanout-ingress
  namespace: ingress-lab-04
spec:
  ingressClassName: nginx
  rules:
    - host: fanout.local
      http:
        paths:
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
